Rewriting Original Poker Game
Updates to add actual poker game logic to the original, and use more styles to make it more modern