@@ -1,13 +1,14 @@
 package com.finance;
+
 import java.util.*;
 
 public class Deck {
-    private List<Card> cards = new ArrayList<>();
+    private final List<Card> cards = new ArrayList<>();
     public Deck() {
-        String[] suits = {"♥", "♦", "♣", "♠"};
-        String[] ranks = {"2","3","4","5","6","7","8","9","10","J","Q","K","A"};
-        for (String s : suits) for (String r : ranks) cards.add(new Card(r, s));
+        for (int s = 0; s < 4; s++)
+            for (int r = 0; r < 13; r++)
+                cards.add(new Card(r, s));
         Collections.shuffle(cards);
     }
-    public Card draw() { return cards.remove(0); }
+    public Card draw() { return cards.removeFirst(); }
 }
